--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "spa-ethereum-l1",
+  "name": "spa-subgraph",
   "license": "UNLICENSED",
   "scripts": {
-    "codegen": "graph codegen",
-    "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ sperax/spa-ethereum-l1",
-    "create-local": "graph create --node http://localhost:8020/ sperax/spa-ethereum-l1",
-    "remove-local": "graph remove --node http://localhost:8020/ sperax/spa-ethereum-l1",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 sperax/spa-ethereum-l1"
+    "codegen-l1": "graph codegen spaL1Subgraph.yaml",
+    "build-l1": "graph build spaL1Subgraph.yaml",
+    "deploy-l1": "graph deploy --node https://api.thegraph.com/deploy/ sperax/spa-ethereum-l1 spaL1Subgraph.yaml",
+    "create-local-l1": "graph create --node http://localhost:8020/ sperax/spa-ethereum-l1 spaL1Subgraph.yaml",
+    "remove-local-l1": "graph remove --node http://localhost:8020/ sperax/spa-ethereum-l1 spaL1Subgraph.yaml",
+    "deploy-local-l1": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 sperax/spa-ethereum-l1 spaL1Subgraph.yaml",
+    "codegen-l2": "graph codegen spaL2Subgraph.yaml",
+    "build-l2": "graph build spaL2Subgraph.yaml",
+    "deploy-l2": "graph deploy --node https://api.thegraph.com/deploy/ bayou020/spa-l2 spaL2Subgraph.yaml spaL2Subgraph.yaml ",
+    "create-local-l2": "graph create  --node http://localhost:8020/ bayou020/spa-l2 spaL2Subgraph.yaml ",
+    "remove-local-l2": "graph remove  --node http://localhost:8020/ bayou020/spa-l2 spaL2Subgraph.yaml ",
+    "deploy-local-l2": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 bayou020/spa-l2 spaL2Subgraph.yaml "
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.26.0",
