--- a/spaL2Subgraph.yaml
+++ b/spaL2Subgraph.yaml
@@ -8,7 +8,8 @@ dataSources:
     source:
       address: "0x5575552988A3A80504bBaeB1311674fCFd40aD4B"
       abi: SperaxL2
-      startBlock: 3932095
+      # startBlock: 3932095
+      startBlock: 6067182
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
